Update wss and deploy
- Khi client ket noi se phan hoi data moi nhat
- Them trang thai PROCESSING... cho current status
- Chỉnh sữa status tool

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,17 +54,17 @@
         </td>
         <td>
           <div class="wrap__content__title__item">
-            <p id="previousIndex">28102002</p>
+            <p id="previousIndex">-</p>
           </div>
         </td>
         <td>
           <div class="wrap__content__title__item">
-            <p id="previousTaxCode">1234567890-002</p>
+            <p id="previousTaxCode">-</p>
           </div>
         </td>
         <td>
           <div class="wrap__content__title__item">
-            <b class="status__taxcode" id="previousStatus">NOT FOUND</b>
+            <b class="status__taxcode" id="previousStatus">-</b>
           </div>
         </td>
       </tr>
@@ -74,17 +74,17 @@
         </td>
         <td>
           <div class="wrap__content__title__item">
-            <p id="currentIndex">28102002</p>
+            <p id="currentIndex">-</p>
           </div>
         </td>
         <td>
           <div class="wrap__content__title__item">
-            <p id="currentTaxCode">1234567890-002</p>
+            <p id="currentTaxCode">-</p>
           </div>
         </td>
         <td>
           <div class="wrap__content__title__item">
-            <b class="status__taxcode" id="currentStatus">Success</b>
+            <b class="status__taxcode" id="currentStatus">-</b>
           </div>
         </td>
       </tr>
