--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,25 +31,25 @@
 
     <table class="table__info__tax__code">
       <tr>
-        <th></th>
-        <th>
+        <th style="width: 10%;"></th>
+        <th style="width: 20%;">
           <div class="wrap__content__title__item">
             <b>Index</b>
           </div>
         </th>
-        <th>
+        <th style="width: 40%;">
           <div class="wrap__content__title__item">
             <b>Tax Code</b>
           </div>
         </th>
-        <th>
+        <th style="width: 30%;">
           <div class="wrap__content__title__item">
             <b>Status</b>
           </div>
         </th>
       </tr>
       <tr>
-        <td style="width: 10%;">
+        <td>
           <b>Previous</b>
         </td>
         <td>
@@ -57,7 +57,7 @@
             <p id="previousIndex">-</p>
           </div>
         </td>
-        <td>
+        <td >
           <div class="wrap__content__title__item">
             <p id="previousTaxCode">-</p>
           </div>
@@ -69,7 +69,7 @@
         </td>
       </tr>
       <tr>
-        <td style="width: 10%;">
+        <td>
           <b>Current</b>
         </td>
         <td>
